@@ -4,6 +4,10 @@
 	libfreeipmi/include/freeipmi/api/ipmi-api.h (ipmi_cmd_ipmb): New
 	function.
 
+	* libfreeipmi/src/debug/ipmi-debug-lan.c,
+	libfreeipmi/include/freeipmi/debug/ipmi-debug.h
+	(ipmi_dump_lan_packet_ipmb): New function.
+
 	* Various code cleanup and minor enhancements.
 	
 2008-08-18 Albert Chu <chu11@llnl.gov>
